--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   path_provider: ^2.1.5
   package_info_plus: ^8.0.2
   flutter_html: ^3.0.0
+  flutter_map: ^8.2.1
+  geolocator: ^14.0.2
+  google_maps_flutter: ^2.13.1
+  graphic: ^2.6.0
 
 
 dev_dependencies:
