--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   geolocator: ^14.0.2
   google_maps_flutter: ^2.13.1
   graphic: ^2.6.0
+  image_picker: ^1.2.0
+  file_picker: ^10.3.3
+  flutter_colorpicker: ^1.1.0
 
 
 dev_dependencies:
